@@ -122,14 +122,7 @@ class tx_jhedamextender_pi1 extends tslib_pibase {
         //$where .= ' AND tx_dam.tx_jhedamextender_usage LIKE \'%' . $this->conf['specialUsage'] . '%\'';
         $where .= ' AND tx_dam.tx_jhedamextender_usage  = ' . $this->conf['specialUsage'];
 
-		//hack for Produktmappe GB
-		if($this->conf['selectedCategory'] == '8'){
-			$orderBy = 'tx_dam.tx_jhedamextender_path,tx_dam.tx_jhedamextender_order';
-		} else {
-			$orderBy = 'tx_dam.tx_jhedamextender_order';
-		}
-		//correct way:
-		//$orderBy = 'tx_dam.tx_jhedamextender_order';
+	$orderBy = 'tx_dam.tx_jhedamextender_order';
 
         $res = $GLOBALS['TYPO3_DB']->exec_SELECT_mm_query(
             'tx_dam.*',
