@@ -1,3 +1,7 @@
+2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.2
+
+	*p1:  finally deleted hack for Produktmappe GB
+
 2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.1
 
 	*p1:  reenabled hack for Produktmappe GB
